@@ -335,6 +335,7 @@ namespace libtorrent
 		SET(web_seed_name_lookup_retry, 1800, nullptr),
 		SET(close_file_interval, CLOSE_FILE_INTERVAL, &session_impl::update_close_file_interval),
 		SET(max_web_seed_connections, 3, nullptr),
+		SET(resolver_cache_timeout, 1200, &session_impl::update_resolver_cache_timeout),
 	}});
 
 #undef SET
